--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ after_success:
 - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then 
   docker login -u="$DOCKER_USER" -p="$DOCKER_PASS";
   docker push softinstigate/lektor:latest;
-  docker tag softinstigate/lektor:latest
-  softinstigate/lektor:$LEKTOR_VERSION;
+  docker tag softinstigate/lektor:latest softinstigate/lektor:$LEKTOR_VERSION;
   docker push softinstigate/lektor:$LEKTOR_VERSION;
   fi
 
