Remove the 'latest' tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ services:
   - docker
 
 script:
-  - docker build --build-arg RELEASE=$LEKTOR_VERSION -t softinstigate/lektor .
+  - docker build --build-arg RELEASE=$LEKTOR_VERSION -t softinstigate/lektor:$LEKTOR_VERSION .
 
 after_success:
   - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then 
       docker login -u="$DOCKER_USER" -p="$DOCKER_PASS";
-      docker push softinstigate/lektor:latest;
-      docker tag softinstigate/lektor:latest softinstigate/lektor:$LEKTOR_VERSION;
       docker push softinstigate/lektor:$LEKTOR_VERSION;
     fi
 
