--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ services:
 
 script:
   - docker build --build-arg RELEASE=$LEKTOR_VERSION -t softinstigate/lektor:$LEKTOR_VERSION .
+    docker tag softinstigate/lektor:latest softinstigate/lektor:"$LEKTOR_VERSION"
 
 after_success:
   - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then 
       docker login -u="$DOCKER_USER" -p="$DOCKER_PASS";
       docker push softinstigate/lektor:$LEKTOR_VERSION;
+      docker push softinstigate/lektor:latest;
     fi
 
 env:
